[project]
name = "dashcam-depth-object-detect-looper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.4",
    "rerun-sdk",
    "quart",
    "transformers>=4.53.0",
    "torch>=2.7.1",
]
